ucslint (8.0.0-17) unstable; urgency=low

  * Bug #51375: Check for uldap.searchDn()
  * Bug #51476: Check for Essential:yes and
    Priority:required/important/standard packages

 -- Philipp Hahn <hahn@univention.de>  Sat, 20 Jun 2020 17:34:21 +0200

ucslint (8.0.0-16) unstable; urgency=low

  * Bug #51248: Check debian/compat

 -- Philipp Hahn <hahn@univention.de>  Thu, 28 May 2020 18:21:42 +0200

ucslint (8.0.0-15) unstable; urgency=low

  * Bug #49704: Convert to Python 3

 -- Philipp Hahn <hahn@univention.de>  Mon, 25 May 2020 12:16:20 +0200

ucslint (8.0.0-14) unstable; urgency=medium

  * Bug #49704: Convert to Python 3
  * Bug #51105: Check invalid Python string literals
  * Bug #51248: Check debian/compat
  * Bug #51247: Check debian/*.dirs
  * Bug #51246: Ignore more DH files
  * Bug #49683: Check debian/*.ucs files
  * Bug #49620: Check debian/changelog is strict-monotonical
  * Bug #48747: Check .uinst files
  * Bug #43981: Check Debian maintainer script actions
  * Bug #42294: Run from CI pipeline

 -- Philipp Hahn <hahn@univention.de>  Wed, 20 May 2020 12:55:10 +0200

ucslint (8.0.0-13) unstable; urgency=low

  * Bug #42480: Speed-up spelling detection
  * Bug #49520: Fix ucslint.overrides application

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 12:33:51 +0200

ucslint (8.0.0-12) unstable; urgency=low

  * Bug #28497: Fix migration to dh-python

 -- Philipp Hahn <hahn@univention.de>  Tue, 21 May 2019 08:37:44 +0200

ucslint (8.0.0-11) unstable; urgency=medium

  * Bug #28497: migrate ucslint to dh-python

 -- Florian Best <best@univention.de>  Mon, 20 May 2019 18:53:37 +0200

ucslint (8.0.0-10) unstable; urgency=low

  * Bug #42480: Speed-up spelling detection

 -- Philipp Hahn <hahn@univention.de>  Mon, 20 May 2019 15:21:03 +0200

ucslint (8.0.0-9) unstable; urgency=low

  * Bug #42480: Ignore more files.

 -- Philipp Hahn <hahn@univention.de>  Mon, 20 May 2019 10:23:59 +0200

ucslint (8.0.0-8) unstable; urgency=low
