@@ -26,4 +26,6 @@ desc: |
    it now runs directly from our CI pipeline.
  * Check for usage of `uldap.searchDn()`.
  * Check for packages declaring dependencies on `Essential:yes` packages.
-bug: [49704, 51105, 51107, 51248, 51247, 51246, 49683, 49620, 48747, 43981, 42294, 51375, 51476]
+ * Check users of `custom_{user,group}name()` registering for required UCR
+   variables.
+bug: [49704, 51105, 51107, 51248, 51247, 51246, 49683, 49620, 48747, 43981, 42294, 51375, 51476, 50056]
